# NL-AI-Retail-Lakehouse-App

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
retail_lakehouse/: cbs_to_lakehouse.py  config.yaml
retail_lakehouse/app/: app.py
retail_lakehouse/core/: agent.py
retail_lakehouse/data/: Branches.json  DataProperties.json  Periods.json
retail_lakehouse/data/duckdb/queries/: bronze.sql  gold.sql  silver.sql
retail_lakehouse/database/: database.py
retail_lakehouse/ingestion/: cbs_api_extract.py
